[package]
name = "bili-checkin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
ureq = "2.9.1"
bili-api-rs = { version = "0.1.0", git = "https://github.com/YangchenYe323/bili-api-rs.git"}
serde_json = "1.0.109"
